# ml-project-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/dashboard/: app.py
{{cookiecutter.project_slug}}/settings/: settings.toml
{{cookiecutter.project_slug}}/src/: config.py
{{cookiecutter.project_slug}}/src/configs/: config.py
{{cookiecutter.project_slug}}/src/configs/config_jsons/: default.json
{{cookiecutter.project_slug}}/tests/: test_example.py
